Update: i18n set zh-Hans as default

--- a/src/app/authorized/authorized.component.html
+++ b/src/app/authorized/authorized.component.html
@@ -1,11 +1,5 @@
-<nz-result
-  nzStatus="success"
-  nzTitle="Authorization successful"
-  nzSubTitle="You have successfully associated your Feishu account"
-  i18n-nzTitle
-  i18n-nzSubTitle
->
+<nz-result nzStatus="success" nzTitle="授权成功" i18n-nzTitle nzSubTitle="您已成功关联您的飞书账号" i18n-nzSubTitle>
   <div nz-result-extra>
-    <button nz-button nzType="primary" (click)="close()" i18n>Close</button>
+    <button nz-button nzType="primary" (click)="close()" i18n>关闭</button>
   </div>
 </nz-result>
