--- a/src/app/profile/backup-email/backup-email.component.html
+++ b/src/app/profile/backup-email/backup-email.component.html
@@ -1,6 +1,6 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>Backup Email</nz-form-label>
+    <nz-form-label nzRequired i18n>备用邮箱</nz-form-label>
     <nz-form-control style="width: 328px" [nzAutoTips]="tips.email">
       <input type="text" nz-input formControlName="backup_email" placeholder="mail@example.com" />
     </nz-form-control>
@@ -8,6 +8,6 @@
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
