--- a/src/app/profile/email/email.component.html
+++ b/src/app/profile/email/email.component.html
@@ -1,18 +1,13 @@
 <form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
-    <nz-form-label nzRequired i18n>Email</nz-form-label>
-    <nz-form-control
-      style="width: 328px"
-      nzExtra="*Re-login to the system is required after modification"
-      i18n-nzExtra
-      [nzAutoTips]="tips.email"
-    >
+    <nz-form-label nzRequired i18n>电子邮件</nz-form-label>
+    <nz-form-control style="width: 328px" nzExtra="*修改后需要重新登录系统" i18n-nzExtra [nzAutoTips]="tips.email">
       <input type="text" nz-input formControlName="email" placeholder="mail@example.com" />
     </nz-form-control>
   </nz-form-item>
 </form>
 
 <div *nzModalFooter>
-  <button nz-button type="button" nzType="default" (click)="close()" i18n>Cancel</button>
-  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>Submit</button>
+  <button nz-button type="button" nzType="default" (click)="close()" i18n>取消</button>
+  <button nz-button nzType="primary" form="form" [disabled]="!form.valid" i18n>提交</button>
 </div>
