--- a/src/app/unauthorize/unauthorize.component.html
+++ b/src/app/unauthorize/unauthorize.component.html
@@ -1,10 +1,10 @@
 <nz-result
   nzStatus="403"
   nzTitle="403"
-  nzSubTitle="Sorry, you have not yet linked your Feishu account, please contact the administrator to set up relevant enterprise collaboration"
+  nzSubTitle="抱歉，您还没有绑定飞书账号，请联系管理员设置相关企业协作"
   i18n-nzSubTitle
 >
   <div nz-result-extra>
-    <button nz-button nzType="primary" routerLink="/login" i18n>Back Sign In</button>
+    <button nz-button nzType="primary" routerLink="/login" i18n>返回登录页</button>
   </div>
 </nz-result>
