--- a/src/app/admin/space/projects/managed/managed.component.html
+++ b/src/app/admin/space/projects/managed/managed.component.html
@@ -84,7 +84,7 @@
           >
           </td>
           <td>
-            <a nz-tooltip="进入项目" [routerLink]="['/', data['namespace'], 'overview', 'cluster']">
+            <a nz-tooltip="开发项目" [routerLink]="['/', data['namespace']]">
               {{ data['name'] }}
             </a>
             <nz-tag>{{ data['namespace'] }}</nz-tag>
