--- a/src/app/admin/settings/integrated/cloud/cos/cos.component.html
+++ b/src/app/admin/settings/integrated/cloud/cos/cos.component.html
@@ -13,26 +13,18 @@
   </nz-form-item>
   <nz-form-item>
     <nz-form-label nzRequired i18n>预签名有效期</nz-form-label>
-    <nz-form-control nzHasFeedback [nzAutoTips]="tips.tencent_cos_expired">
-      <nz-input-number
-        style="width: 100%"
-        formControlName="tencent_cos_expired"
-        [nzFormatter]="formatterSec"
-        [nzMin]="0"
-        [nzStep]="1"
-      ></nz-input-number>
+    <nz-form-control [nzAutoTips]="tips.tencent_cos_expired">
+      <nz-input-number-group nzAddOnAfter="秒" i18n-nzAddOnAfter>
+        <nz-input-number formControlName="tencent_cos_expired" [nzMin]="0" [nzStep]="1"></nz-input-number>
+      </nz-input-number-group>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
-    <nz-form-label nzRequired i18n>上传大小限制 (KB)</nz-form-label>
-    <nz-form-control nzHasFeedback [nzAutoTips]="tips.tencent_cos_limit">
-      <nz-input-number
-        style="width: 100%"
-        formControlName="tencent_cos_limit"
-        [nzFormatter]="formatterSize"
-        [nzMin]="0"
-        [nzStep]="1"
-      ></nz-input-number>
+    <nz-form-label nzRequired i18n>上传大小限制</nz-form-label>
+    <nz-form-control [nzAutoTips]="tips.tencent_cos_limit">
+      <nz-input-number-group nzAddOnAfter="KB">
+        <nz-input-number formControlName="tencent_cos_limit" [nzMin]="0" [nzStep]="1"></nz-input-number>
+      </nz-input-number-group>
     </nz-form-control>
   </nz-form-item>
 </form>
