--- a/src/app/admin/work/index/index.component.html
+++ b/src/app/admin/work/index/index.component.html
@@ -17,7 +17,7 @@
     </ng-template>
 
     <ng-template #moreTpl>
-      <a nz-button nzType="text">全部项目</a>
+      <button [routerLink]="['/admin', 'space', 'projects']" nz-button nzType="text" i18n>全部项目</button>
     </ng-template>
 
     <nz-card style="min-height: 600px" [nzTitle]="attentionTitleTpl" [nzExtra]="moreTpl">
@@ -43,13 +43,12 @@
               </button>
             </th>
             <th>
-              <b i18n>项目名称 </b>
+              <b i18n>项目名称</b>
               <i nz-icon nzType="tag"></i>
             </th>
             <th>
               <b i18n>应用 ID</b>
             </th>
-            <th><b i18n>状态</b></th>
             <th><b i18n>有效期</b></th>
           </tr>
         </thead>
@@ -57,27 +56,21 @@
           <ng-container *ngFor="let data of basicTable.data">
             <tr>
               <td nzLeft nzAlign="center">
-                <button nz-button nzType="text" nz-tooltip="取消关注">
+                <button nz-button nzType="text" nz-tooltip="取消关注" i18n-nz-tooltip>
                   <span nz-icon nzType="close"></span>
                 </button>
               </td>
               <td>
-                <a nz-tooltip="开发项目" [routerLink]="['/', data['namespace']]">
+                <a nz-tooltip="开发项目" i18n-nz-tooltip [routerLink]="['/', data['namespace']]">
                   {{ data['name'] }}
                 </a>
                 <nz-tag>{{ data['namespace'] }}</nz-tag>
               </td>
               <td>
-                <a nz-tooltip="查看">{{ data['_id'] }}</a>
+                <a nz-tooltip="查看" i18n-nz-tooltip>{{ data['_id'] }}</a>
               </td>
               <td>
-                <ng-container *ngIf="data['status']; else isFalse">
-                  <nz-badge nzStatus="processing"></nz-badge> 启用
-                </ng-container>
-                <ng-template #isFalse> <nz-badge nzStatus="default"></nz-badge> 关闭 </ng-template>
-              </td>
-              <td>
-                <ng-container *ngIf="data['expire'] === 0; else hasExpire">永久</ng-container>
+                <ng-container *ngIf="data['expire'] === 0; else hasExpire" i18n>永久</ng-container>
                 <ng-template #hasExpire>
                   {{ data['expire'] * 1000 | date: 'yyyy-MM-dd' }}
                 </ng-template>
@@ -92,23 +85,39 @@
     <nz-row [nzGutter]="[8, 8]">
       <nz-col [nzSpan]="24">
         <ng-template #navTpl>
-          <a nz-button nzType="text">进入设置</a>
+          <button nz-button nzType="text" i18n>进入设置</button>
         </ng-template>
 
-        <nz-card nzTitle="便捷导航" [nzExtra]="navTpl">
-          <div nz-card-grid><span nz-icon nzType="partition"></span> 多租户</div>
-          <div nz-card-grid><span nz-icon nzType="cluster"></span> 集群</div>
-          <div nz-card-grid><span nz-icon nzType="team"></span> 开发者</div>
-          <div nz-card-grid><span nz-icon nzType="bulb"></span> 策略</div>
-          <div nz-card-grid><span nz-icon nzType="safety"></span> 安全策略</div>
-          <div nz-card-grid><span nz-icon nzType="rocket"></span> 在线会话</div>
-          <div nz-card-grid><span nz-icon nzType="control"></span> 动态配置</div>
-          <div nz-card-grid><span nz-icon nzType="audit"></span> 审计日志</div>
+        <nz-card nzTitle="便捷导航" i18n-nzTitle [nzExtra]="navTpl">
+          <div nz-card-grid [routerLink]="['/admin', 'space', 'environment']" i18n>
+            <span nz-icon nzType="partition"></span> 多租户
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'space', 'environment', 'cluster']" i18n>
+            <span nz-icon nzType="cluster"></span> 集群
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'orgs', 'users']" i18n>
+            <span nz-icon nzType="team"></span> 开发者
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'orgs', 'permissions']" i18n>
+            <span nz-icon nzType="bulb"></span> 策略
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'settings', 'system']" i18n>
+            <span nz-icon nzType="safety"></span> 安全策略
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'settings', 'system', 'sessions']" i18n>
+            <span nz-icon nzType="rocket"></span> 在线会话
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'settings', 'system', 'values']" i18n>
+            <span nz-icon nzType="control"></span> 动态配置
+          </div>
+          <div nz-card-grid [routerLink]="['/admin', 'settings', 'system', 'audit']" i18n>
+            <span nz-icon nzType="audit"></span> 审计日志
+          </div>
         </nz-card>
       </nz-col>
       <nz-col [nzSpan]="24">
         <ng-template #helpTpl>
-          <a nz-button nzType="text">进入设置</a>
+          <button nz-button nzType="text">服务号</button>
         </ng-template>
 
         <nz-card nzTitle="IT 小助手" [nzExtra]="helpTpl">
@@ -124,6 +133,15 @@
           <nz-autocomplete #auto>
             <nz-auto-option *ngFor="let option of options" [nzValue]="option">{{ option }}</nz-auto-option>
           </nz-autocomplete>
+        </nz-card>
+      </nz-col>
+      <nz-col [nzSpan]="24">
+        <ng-template #knowledgeTpl>
+          <button nz-button nzType="text">更多</button>
+        </ng-template>
+
+        <nz-card nzTitle="知识库" [nzExtra]="knowledgeTpl">
+          <nz-empty></nz-empty>
         </nz-card>
       </nz-col>
     </nz-row>
