--- a/src/app/admin/monitor/apm/apm.component.html
+++ b/src/app/admin/monitor/apm/apm.component.html
@@ -1,5 +1,5 @@
-<!--<nz-row [nzGutter]="[8, 8]">-->
-<!--  <nz-col [nzSpan]="24"> </nz-col>-->
-<!--</nz-row>-->
-
-<app-admin-monitor-apm-cgo-calls></app-admin-monitor-apm-cgo-calls>
+<nz-row [nzGutter]="[8, 8]">
+  <nz-col [nzSpan]="6">
+    <app-admin-monitor-apm-cgo-calls></app-admin-monitor-apm-cgo-calls>
+  </nz-col>
+</nz-row>
