Update: monitor db

--- a/src/app/admin/monitor/db/db.component.html
+++ b/src/app/admin/monitor/db/db.component.html
@@ -3,7 +3,7 @@
     <span nz-icon nzType="loading"></span>
   </ng-template>
   <ng-template #textTpl>
-    <span i18n>已运行了 {{ uptime }} 分钟</span>
+    <span i18n>已运行了 {{ uptime }} 小时</span>
   </ng-template>
 </nz-alert>
 
