--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -38,7 +38,7 @@
     </ul>
   </nz-sider>
   <nz-layout>
-    <nz-content style="padding: 8px">
+    <nz-content>
       <router-outlet></router-outlet>
     </nz-content>
   </nz-layout>
