update: experiment resources

--- a/src/experiment/experiment.component.html
+++ b/src/experiment/experiment.component.html
@@ -9,13 +9,13 @@
           <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'plugins', 'upload']">上传</li>
         </ul>
       </li>
-      <li nz-menu-group nzTitle="媒体">
+      <li nz-menu-group nzTitle="资源">
         <ul>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'media', 'pictures']">
+          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'pictures']">
             <span nz-icon nzType="picture"></span>
             <span>图片</span>
           </li>
-          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'media', 'videos']">
+          <li nz-menu-item nzMatchRouter [routerLink]="['/experiment', 'resources', 'videos']">
             <span nz-icon nzType="video-camera"></span>
             <span>视频</span>
           </li>
